19 Januari 2007: Wouter
	- NSEC3 work. prehash printed only once with time taken to prepare.
	- prints are now only in DEBUG mode (except errors).
	- rr descriptor counts for NSEC3 updated, has an extra field flags.
	- now NSEC3PARAMs with flags!=0 are ignored, as per draft-09.
	- Fixed where only first NSEC3PARAM was properly detected.
	- Added tpkg in manual (because you need to compile with nsec3)
	  that performs the test queries from draft-09 and checks them.
	- Made tpkg to test NSEC3 parameter detection. NSD will skip any
	  NSEC3PARAMs that don't work until the first working one is found.
	  Also, this means unknown hash algorithms are simply ignored.
	  A zone that uses exclusively unknown hash algorithms for NSEC3
	  will give errors on loading (or after zone transfer) but NSD
	  will load and serve the zone (but no NSEC3s are returned).
	- added tpkg in manual to test parent side DS answers.
	  These follow a different code path than child side DS.
	- Will allow NSEC3s(and signatures) below a DNAME.
	- A query for an NSEC3 ownername will lead to DNAME redirection
	  as if the NSEC3 did not exist.
	- Test package in manual that tests NSEC3 and DNAME in the apex.
	- Changed NSEC3 memory requirements from 5 pointers per domain name
	  to 3 pointers and 2 bits.
	- Added jumpstart for nsec3 search, will greatly speed up optout
	  zone nxdomains. At the cost of one ptr per domain name.
	  The speedup also speeds up the nsec3 prepare stage.

18 Januari 2007: Wouter
	- Created 3.0.4 release tag.
	- 3.0.5 number in trunk.
	- add nsd.spec patch from Farkas Levente to contrib.
	- NSEC3 new wireformat and presentation format from draft-09.

11 Januari 2007: Wouter
	- The message 'server .. closed cmd channel' is now priority INFO.
	  This to reduce the 'error' amount in the logs.
	- On error in a tcp request, set to retry next instead of waiting
	  for the tcp timeout.

9 Januari 2007: Wouter
	- TSIG acl matching changed so that NOKEY allow-notify entries match 